--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.1.0",
     "bootstrap-icons": "^1.5.0",
     "core-js": "^2.5.4",
+    "ng-image-slider": "^2.8.0",
     "ngx-useful-swiper": "^10.0.1",
     "rxjs": "~6.3.3",
     "swiper": "^6.8.4",
